<resources>
    <string name="app_name">LoverMoneyPTIT</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="wallet_title">Quan ly vi</string>

    <string name="add_button_title">Them</string>
    <string name="edit_button_title">Sua</string>
    <string name="delete_button_title">Xoa</string>

    <!--Deal-->
    <string name="hint_select_date">Chọn ngày</string>
    <string name="hint_select_wallet">Chọn ví</string>
    <string name="hint_select_group">Chọn nhóm</string>
    <string name="txtPay">Trả nợ</string>
    <string name="txtDebt">Thu nợ</string>
    <string name="txtLoan">Cho vay</string>
    <string name="txtBorrow">Vay/nợ</string>
    <string name="txtAddRevenue">Nhóm thu mới</string>
    <string name="note">Ghi chú</string>
    <string name="addDeal">Thêm giao dịch</string>
    <string name="save">Lưu</string>
    <string name="selectGroup">Chọn nhóm</string>
    <string name="selectWallet">Chọn ví</string>
    <string name="txtSearch">tìm kiếm</string>
    <string name="txtCashIn">Khoản thu</string>
    <string name="txtCashOut">Khoản chi</string>
    <string name="hint_group_name">Tên nhóm</string>
    <string name="txtNewGroup">nhóm mới</string>
    <string name="updateDeal">Cập nhật giao dịch</string>
    <string name="txtTitleEditWallet">Cập nhật ví</string>
    <string name="txtTitleAddWallet">Thêm tài khoản</string>
    <string name="txtAdd">thêm</string>
    <string name="txtCancel">hủy</string>
    <string name="txtEdit">Cập nhật</string>
    <string name="txtTitleLogin">Đăng Nhập</string>
    <string name="txtTitleReg">Đăng Kí</string>
    <string name="txtHintUsername">tài khoản</string>
    <string name="txtHintPassword">mật khẩu</string>
    <string name="txtSaveAccount">nhớ đăng nhập</string>
    <string name="btnLogin">Đăng nhập</string>
</resources>
