<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lovermoneyptit.LoginActivity"
    android:background="@color/colorWhite">


    <TextView
        android:id="@+id/txtTitleLogin"
        android:layout_width="146dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/txtTitleLogin"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txtHintUsername"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/txtHintPassword"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"/>

    <CheckBox
        android:id="@+id/btnSaveAccount"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="414dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:text="@string/txtSaveAccount"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="494dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:text="@string/btnLogin"
        android:background="@color/colorTabSelected"
        />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="#FF9800"
        android:gravity="center"
        android:text="Đăng kí"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />



</RelativeLayout>
