<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lovermoneyptit.AddGroupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAddGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_close_black" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="3dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:src="@mipmap/icons_selecdt_gr" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/selectGroupLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtGroupName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_icon_fragment_add_deal"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_group_name"
                        android:textSize="24sp" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btnBorrowLoan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBorrow"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/btnCashIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCashIn"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/btnCashOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCashOut"
                        android:textSize="24sp" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
