<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarDealDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_close_black">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:src="@mipmap/ic_money_debt_foreground"
                    />

                <ImageView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:src="@mipmap/ic_group"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:src="@mipmap/ic_ghichu_debt_foreground"
                    />

                <ImageView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:src="@mipmap/ic_lich_debt_foreground"
                    />

                <ImageView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:src="@mipmap/icon_wallet"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:hint="Số tiền"
                    android:padding="10dp"
                    android:id="@+id/txtDealValue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:layout_marginBottom="0dp"
                    android:inputType="number" />

                <LinearLayout
                    android:id="@+id/selectGroupLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:hint="@string/hint_select_group"
                        android:id="@+id/txtDealGroup"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_icon_fragment_add_deal"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textSize="22sp" />
                </LinearLayout>

                <EditText
                    android:hint="@string/note"
                    android:padding="10dp"
                    android:id="@+id/txtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_icon_fragment_add_deal"
                    android:layout_marginBottom="0dp"
                    />

                <LinearLayout
                    android:id="@+id/datePickerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:hint="@string/hint_select_date"
                        android:padding="10dp"
                        android:id="@+id/txtDealCreatedDate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_icon_fragment_add_deal"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/selectWalletLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:hint="@string/hint_select_wallet"
                        android:padding="10dp"
                        android:id="@+id/txtSelectWallet"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_icon_fragment_add_deal"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>






